Fix sign up form positioning on tablets and larger screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -363,9 +363,7 @@ main {
 
     #signup-form {
         max-width: 400px;
-        position: absolute;
-        left: 10%;
-        top: 150px;
+        margin-top: 120px;
     }
 
     .text-input:hover {
